--- a/BenWebsiteHome.html
+++ b/BenWebsiteHome.html
@@ -2,6 +2,7 @@
 <HTML>
    <HEAD>
       <TITLE>Ben's First HTML document</TITLE>
+	  <link rel="stylesheet" type="text/css" href="style.css">
    </HEAD>
    <BODY>
       <P>This is the home page</p>
